Cannot abort multiple XHR POSTs made to same url https://bugs.webkit.org/show_bug.cgi?id=106937

Reviewed by Alexey Proskuryakov.

Source/WebCore:

Test: http/tests/cache/cancel-multiple-post-xhrs.html

* loader/cache/CachedResource.cpp:
(WebCore::CachedResource::removeClient): Call allClientsRemoved() regardless
    of whether this resource is inCache(). Otherwise, CachedRawResources will
    not have the opportunity to cancel as expected. However, don't cancel
    if the last client was removed because we're in the middle of switching
    the clients over to a successfully revalidated resource.

LayoutTests:

* http/tests/cache/cancel-multiple-post-xhrs-expected.txt: Added.
* http/tests/cache/cancel-multiple-post-xhrs.html: Added.
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/125534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140174 268f45cc-cd09-0410-ab3c-d52691b4dbfc